# yt-media-storage

./: CMakeLists.txt  HEADER  README.md  vcpkg.json
.github/workflows/: build.yml
include/: media_storage.h
src/: CMakeLists.txt  chunker.cpp  chunker.h  configuration.h  crypto.cpp  crypto.h  dct_common.h  decoder.cpp  decoder.h  drive_manager_ui.cpp  drive_manager_ui.h  encoder.cpp  encoder.h  integrity.cpp  integrity.h  main.cpp  main_gui.cpp  media_storage_api.cpp  stream.cpp  stream.h  video_decoder.cpp  video_decoder.h  video_encoder.cpp  video_encoder.h
src/libs/: CRC.h
src/libs/wirehair/: gf256.cpp  gf256.h
tests/: CMakeLists.txt  test_chunker.cpp  test_codec.cpp  test_crypto.cpp  test_integrity.cpp  test_roundtrip.cpp  test_stream.cpp
